<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Prototype</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome!</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="button">Sign In</string>
	<string name="prompt">Choose a department</string>
    <string-array name="departments">
    <item>Fire Department</item>
    <item>Career Service</item>
    <item>Dinning Service</item>
    </string-array>
</resources>
